# ilp_gaffer_movie

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  __CMakeLists.txt  change_log.txt  package.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: constants.env
.github/workflows/: ci.yml  docker.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  InterproceduralOptimization.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
cmake/modules/: FindGaffer.cmake
configured_files/: CMakeLists.txt  config.hpp.in
include/ilp_gaffer_movie/: av_reader.hpp  movie_reader.hpp  movie_writer.h  movie_writer.hpp  startup.hpp  type_id.hpp
include/ilp_movie/: color.hpp  decoder.hpp  demux.hpp  frame.hpp  log.hpp  mux.hpp  pixel_data.hpp  pixel_format.hpp
include/ilp_mux/: mux.hpp
python/IlpGafferMovie/: __init__.py
python/IlpGafferMovieUI/: MovieReaderUI.py  MovieWriterUI.py  __init__.py
src/: CMakeLists.txt
src/ilp_gaffer_movie/: CMakeLists.txt  av_reader.cpp  movie_reader.cpp  movie_writer.cpp  startup.cpp
src/ilp_gaffer_movie/internal/: LRUCache.h  LRUCache.inl  SharedDecoders.cpp  SharedDecoders.h  SharedFrames.cpp  SharedFrames.h  TaskMutex.h  trace.cpp  trace.hpp
src/ilp_gaffer_movie_module/: CMakeLists.txt  ilp_gaffer_movie_module.cpp
src/ilp_movie/: CMakeLists.txt  decoder.cpp  demux.cpp  frame.cpp  log.cpp  mux.cpp  pixel_data.cpp
src/ilp_movie/internal/: dict_utils.cpp  dict_utils.hpp  filter_graph.cpp  filter_graph.hpp  frame_rate.hpp  log_utils.cpp  log_utils.hpp  stream.cpp  stream.hpp  timestamp.cpp  timestamp.hpp
src/ilp_mux/: CMakeLists.txt  mux.cpp
startup/gui/: examples.py  menu.py
startup/gui/IlpGafferMovie/: defaultColorSpace.py  initLog.py
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/ilp_movie/: CMakeLists.txt  decoder_test.cpp  demux_test.cpp  frame_test.cpp  mux_test.cpp
